<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.dashaasavel</groupId>
	<artifactId>runapp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<modules>
		<module>runservice</module>
		<module>userservice</module>
	</modules>
	<packaging>pom</packaging>
	<name>runapp</name>
	<properties>

		<java.version>17</java.version>
		<kotlin.version>1.7.10</kotlin.version>

		<!-- DOCKER -->
		<docker.current.tag>dev</docker.current.tag>
		<docker.image.java.options>
			--add-opens=java.base/java.io=ALL-UNNAMED
			--add-opens=java.base/java.math=ALL-UNNAMED
			--add-opens=java.base/java.lang=ALL-UNNAMED
			--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
			--add-opens=java.base/java.util=ALL-UNNAMED
			--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
			--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
		</docker.image.java.options>
		<docker.baseimage.tomcat>tomcat:9-java17</docker.baseimage.tomcat>
		<buildVersion>dev</buildVersion>
		<docker.maven.plugin.fabric8.version>0.37.0</docker.maven.plugin.fabric8.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib-jdk8</artifactId>
			<version>${kotlin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-test</artifactId>
			<version>${kotlin.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>${docker.maven.plugin.fabric8.version}</version>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<version>${kotlin.version}</version>
				<executions>
					<execution>
						<id>compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>test-compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<jvmTarget>1.8</jvmTarget>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
